Improve password recovery email and update flow

--- a/nerin_final_updated/frontend/login.html
+++ b/nerin_final_updated/frontend/login.html
@@ -62,7 +62,7 @@
             <p class="forgot-card__eyebrow">Acceso mayorista</p>
             <h3>¿Olvidaste tu contraseña?</h3>
             <p class="forgot-card__lead">
-              Te pedimos el correo que está cargado en el admin (Render Disk) para enviarte las instrucciones con Resend.
+              Ingresá el correo de tu cuenta mayorista y te enviaremos una clave temporal para recuperar el acceso.
             </p>
           </div>
           <button type="button" class="forgot-toggle" id="forgotToggle">Cerrar</button>
