--- a/nerin_final_updated/frontend/checkout/confirmacion-transferencia.html
+++ b/nerin_final_updated/frontend/checkout/confirmacion-transferencia.html
@@ -33,7 +33,7 @@
             ><img src="/assets/IMG_3086.png" alt="NERIN" class="site-logo"
           /></a>
         </div>
-        <button class="menu-toggle" id="navToggle">☰</button>
+        <button class="menu-toggle" id="navToggle">&#9776;</button>
         <nav id="mainNav">
           <ul>
             <li><a href="/index.html">Inicio</a></li>
