--- a/nerin_final_updated/frontend/seguimiento.html
+++ b/nerin_final_updated/frontend/seguimiento.html
@@ -42,7 +42,7 @@
     <header>
       <div class="header-inner">
         <div class="logo"><a href="/index.html" class="brand"><img src="../assets/IMG_3086.png" alt="NERIN" class="site-logo" /></a></div>
-        <button class="menu-toggle" id="navToggle">☰</button>
+        <button class="menu-toggle" id="navToggle">&#9776;</button>
         <nav id="mainNav">
           <ul>
             <li><a href="/index.html">Inicio</a></li>
