--- a/nerin_final_updated/frontend/shop.html
+++ b/nerin_final_updated/frontend/shop.html
@@ -163,7 +163,7 @@
               class="site-logo"
           /></a>
         </div>
-        <button class="menu-toggle" id="navToggle">☰</button>
+        <button class="menu-toggle" id="navToggle">&#9776;</button>
         <nav id="mainNav">
           <ul>
             <li><a href="/index.html">Inicio</a></li>
