Fix UTF-8 headers and mojibake tooling

--- a/frontend/estado-pedido.html
+++ b/frontend/estado-pedido.html
@@ -2,7 +2,9 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Estado del Pedido</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+
+<title>Estado del Pedido</title>
 </head>
 <body>
   <h1 id="message">Procesando pago...</h1>
