--- a/frontend/confirmar-datos.html
+++ b/frontend/confirmar-datos.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Confirmar datos</title>
   <style>
     body{font-family:Arial,Helvetica,sans-serif;background:#f5f5f5;margin:0;padding:20px;}
