--- a/nerin_final_updated/frontend/failure.html
+++ b/nerin_final_updated/frontend/failure.html
@@ -1,7 +1,10 @@
 <!doctype html>
 <html lang="es">
   <head>
-  <!-- Meta Pixel Code -->
+    <meta charset="UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+
+<!-- Meta Pixel Code -->
   <script>
   !function(f,b,e,v,n,t,s)
   {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -27,9 +30,7 @@
 
     gtag('config', 'G-W0NY5MHXND');
   </script>
-
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pago rechazado</title>
     <link rel="stylesheet" href="/style.css?v=cartfix-2" />
     <link rel="stylesheet" href="css/success.css" />
