--- a/nerin_final_updated/frontend/pages/confirmacion.html
+++ b/nerin_final_updated/frontend/pages/confirmacion.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+
 <!-- Meta Pixel Code -->
 <script>
 !function(f,b,e,v,n,t,s)
@@ -27,9 +30,7 @@ src="https://www.facebook.com/tr?id=1549364576305752&ev=PageView&noscript=1"
 
     gtag('config', 'G-W0NY5MHXND');
   </script>
-
-  <meta charset="UTF-8" />
-  <title>Pago confirmado</title>
+<title>Pago confirmado</title>
   <link rel="stylesheet" href="/css/style.css?v=cartfix-2" />
   <link rel="stylesheet" href="/components/np-footer.css?v=np-r2">
   <script src="/components/np-footer.js?v=np-r2" defer></script>
