--- a/nerin_final_updated/import_calc_frontend/index.html
+++ b/nerin_final_updated/import_calc_frontend/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-  <!-- Meta Pixel Code -->
+    <meta charset="UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+
+<!-- Meta Pixel Code -->
   <script>
   !function(f,b,e,v,n,t,s)
   {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -18,8 +21,7 @@
   src="https://www.facebook.com/tr?id=1549364576305752&ev=PageView&noscript=1"
   /></noscript>
   <!-- End Meta Pixel Code -->
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculadora Profesional de Costos de Importación</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
