Improve SEO, legal content, and Meta feed tracking

--- a/nerin_final_updated/frontend/account-minorista.html
+++ b/nerin_final_updated/frontend/account-minorista.html
@@ -34,6 +34,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, viewport-fit=cover"
     />
+    <meta name="robots" content="noindex, nofollow" />
     <title>Mi cuenta minorista – NERIN</title>
     <link
       rel="stylesheet"
