--- a/nerin_final_updated/frontend/checkout-steps.html
+++ b/nerin_final_updated/frontend/checkout-steps.html
@@ -31,6 +31,7 @@
     gtag('config', 'G-W0NY5MHXND');
   </script>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="noindex, nofollow" />
     <title>Checkout</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
       <link rel="stylesheet" href="/style.css?v=cartfix-2" />
