--- a/nerin_final_updated/frontend/checkout.html
+++ b/nerin_final_updated/frontend/checkout.html
@@ -31,6 +31,7 @@ src="https://www.facebook.com/tr?id=1549364576305752&ev=PageView&noscript=1"
     gtag('config', 'G-W0NY5MHXND');
   </script>
 <title>Estado del pago</title>
+  <meta name="robots" content="noindex, nofollow" />
   <link rel="stylesheet" href="/css/style.css?v=cartfix-2" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
   <link rel="stylesheet" href="/components/np-footer.css?v=np-r2">
