--- a/nerin_final_updated/frontend/garantia.html
+++ b/nerin_final_updated/frontend/garantia.html
@@ -186,7 +186,12 @@
           </li>
           <li>
             <strong>Notificar dentro de 7 días corridos</strong>
-            <span>Si ves algo inusual, escribinos por WhatsApp o email dentro de los 7 días posteriores a la entrega.</span>
+            <span>
+              Si ves algo inusual, escribinos por
+              <a data-site-whatsapp-link href="https://wa.me/541112345678">WhatsApp</a>
+              o email (<a data-site-email-link href="mailto:soporte@nerinparts.com.ar">soporte@nerinparts.com.ar</a>)
+              dentro de los 7 días posteriores a la entrega.
+            </span>
           </li>
           <li>
             <strong>Enviar evidencia</strong>
@@ -208,6 +213,7 @@
             <li>Nota de crédito para aplicar a tu próxima compra.</li>
             <li>Devolución por el mismo medio de pago cuando corresponda.</li>
           </ul>
+          <p class="policy-note" data-site-warranty></p>
         </article>
       </section>
 
@@ -219,6 +225,10 @@
           <a href="/pages/terminos.html">Términos y condiciones</a>
           <a href="/login.html">Portal mayorista</a>
         </div>
+        <p class="policy-contact">
+          Dirección comercial: <span data-site-address></span> ·
+          Horarios: <span data-site-hours></span>
+        </p>
         <!-- TODO: Agregar política de privacidad específica cuando esté disponible. -->
       </section>
     </main>
@@ -230,5 +240,6 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script type="module" src="/js/config.js"></script>
+    <script type="module" src="/js/legal.js"></script>
   </body>
 </html>
