--- a/nerin_final_updated/frontend/checkout-form.html
+++ b/nerin_final_updated/frontend/checkout-form.html
@@ -32,6 +32,7 @@
   </script>
 
     <meta http-equiv="refresh" content="0; url=/checkout-steps.html" />
+    <meta name="robots" content="noindex, nofollow" />
     <title>Redirigiendo…</title>
     <script>window.location.replace('/checkout-steps.html');</script>
     <link rel="stylesheet" href="/components/np-footer.css?v=np-r2">
