--- a/nerin_final_updated/frontend/checkout/confirmacion-efectivo.html
+++ b/nerin_final_updated/frontend/checkout/confirmacion-efectivo.html
@@ -22,6 +22,7 @@
   /></noscript>
   <!-- End Meta Pixel Code -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="noindex, nofollow" />
     <title>Pago en efectivo • NERINParts</title>
     <link rel="stylesheet" href="/style.css?v=cartfix-2" />
     <link rel="stylesheet" href="/components/np-footer.css?v=np-r2" />
