--- a/nerin_final_updated/frontend/login.html
+++ b/nerin_final_updated/frontend/login.html
@@ -34,6 +34,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, viewport-fit=cover"
     />
+    <meta name="robots" content="noindex, nofollow" />
     <title>NERIN – Acceder</title>
         <link
       rel="stylesheet"
