--- a/nerin_final_updated/frontend/pages/terminos.html
+++ b/nerin_final_updated/frontend/pages/terminos.html
@@ -109,7 +109,7 @@ src="https://www.facebook.com/tr?id=1549364576305752&ev=PageView&noscript=1"
 
   <main>
     <h1>Términos y Condiciones</h1>
-    <p class="updated">Última actualización: {{FECHA_ACTUALIZACION: 2 de agosto de 2025}}</p>
+    <p class="updated">Última actualización: 2 de agosto de 2025</p>
 
     <nav>
       <ul>
@@ -129,8 +129,12 @@ src="https://www.facebook.com/tr?id=1549364576305752&ev=PageView&noscript=1"
 
     <h2 id="identificacion">1. Identificación del proveedor</h2>
     <p>
-      Silvino Nerin – CUIT 20-93002432-6 – Paseo Colón 545, Ciudad Autónoma de Buenos Aires, Argentina.
-      Contacto: {{EMAIL_ATENCION}} | WhatsApp: {{WHATSAPP}}.
+      Silvino Nerin – CUIT 20-93002432-6 – <span data-site-address></span>.
+      Contacto:
+      <a data-site-email-link href="mailto:soporte@nerinparts.com.ar">soporte@nerinparts.com.ar</a>
+      |
+      WhatsApp: <a data-site-whatsapp-link href="https://wa.me/541112345678">541112345678</a>.
+      <span class="legal-hours">Horario de atención: <span data-site-hours></span></span>
     </p>
 
     <h2 id="pagos">2. Medios de pago</h2>
@@ -145,12 +149,16 @@ src="https://www.facebook.com/tr?id=1549364576305752&ev=PageView&noscript=1"
 
     <h2 id="envios">4. Envíos</h2>
     <p>
-      Realizamos envíos a todo el país. Los plazos y costos se informan al finalizar la compra. Una vez entregado el paquete al transportista, la responsabilidad por demoras o daños corre por cuenta de éste.
+      Realizamos envíos a todo el país. <span data-site-shipping></span> Los plazos y costos se informan al finalizar la compra. Una vez entregado el paquete al transportista, la responsabilidad por demoras o daños corre por cuenta de éste.
     </p>
 
     <h2 id="arrepentimiento">5. Derecho de arrepentimiento</h2>
     <p>
-      Conforme al art. 1110 del Código Civil y Comercial y la Resolución 424/20, el comprador puede revocar la compra dentro de los 10 días corridos de recibido el producto. Para ejercer este derecho, debe comunicarse a {{EMAIL_ATENCION}} o {{WHATSAPP}} y devolver el producto sin uso y con su embalaje original.
+      Conforme al art. 1110 del Código Civil y Comercial y la Resolución 424/20, el comprador puede revocar la compra dentro de los 10 días corridos de recibido el producto. Para ejercer este derecho, debe comunicarse a
+      <a data-site-email-link href="mailto:soporte@nerinparts.com.ar">soporte@nerinparts.com.ar</a>
+      o
+      <a data-site-whatsapp-link href="https://wa.me/541112345678">541112345678</a>
+      y devolver el producto sin uso y con su embalaje original.
     </p>
 
     <h2 id="cambios">6. Cambios y devoluciones</h2>
@@ -160,7 +168,7 @@ src="https://www.facebook.com/tr?id=1549364576305752&ev=PageView&noscript=1"
 
     <h2 id="garantia">7. Garantía legal</h2>
     <p>
-      Todos los productos cuentan con una garantía legal de 6 meses conforme al art. 11 de la Ley 24.240. La garantía cubre defectos de fabricación y no aplica ante daños por uso indebido o instalación incorrecta.
+      Todos los productos cuentan con una garantía legal de 6 meses conforme al art. 11 de la Ley 24.240. <span data-site-warranty></span>
     </p>
 
     <h2 id="datos">8. Protección de datos personales</h2>
@@ -185,6 +193,7 @@ src="https://www.facebook.com/tr?id=1549364576305752&ev=PageView&noscript=1"
   </main>
 
   <div id="footer-root"></div>
+  <script type="module" src="/js/config.js"></script>
+  <script type="module" src="/js/legal.js"></script>
 </body>
 </html>
-
