Improve SEO, legal content, and Meta tracking

--- a/nerin_final_updated/frontend/cart.html
+++ b/nerin_final_updated/frontend/cart.html
@@ -35,6 +35,7 @@
       content="width=device-width, initial-scale=1.0, viewport-fit=cover"
     />
     <title>NERIN – Carrito</title>
+    <meta name="robots" content="noindex, nofollow" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
