--- a/nerin_final_updated/frontend/checkout-steps.html
+++ b/nerin_final_updated/frontend/checkout-steps.html
@@ -32,6 +32,7 @@
   </script>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Checkout</title>
+    <meta name="robots" content="noindex, nofollow" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
       <link rel="stylesheet" href="/style.css?v=cartfix-2" />
     <link rel="stylesheet" href="/components/np-footer.css?v=np-r2">
