--- a/nerin_final_updated/frontend/garantia.html
+++ b/nerin_final_updated/frontend/garantia.html
@@ -121,6 +121,9 @@
           <p class="policy-hero__lead">
             Cómo funciona la compra protegida en NERINParts para técnicos, laboratorios y comercios que trabajan con módulos Samsung Service Pack originales.
           </p>
+          <p class="policy-hero__note" data-site-text="politica_garantia_resumen">
+            Garantía técnica por defectos de fábrica: probá el módulo sin pegar y notificá dentro de los 7 días corridos posteriores a la entrega.
+          </p>
           <div class="policy-hero__chips" aria-label="Puntos destacados de la compra protegida">
             <span>Service Pack original</span>
             <span>Factura A/B</span>
@@ -219,6 +222,12 @@
           <a href="/pages/terminos.html">Términos y condiciones</a>
           <a href="/login.html">Portal mayorista</a>
         </div>
+        <p class="policy-contact">
+          Contacto directo:
+          <a data-site-email href="mailto:ventas@nerinparts.com.ar">ventas@nerinparts.com.ar</a>
+          ·
+          <a data-site-whatsapp href="https://wa.me/5491130341550">WhatsApp</a>
+        </p>
         <!-- TODO: Agregar política de privacidad específica cuando esté disponible. -->
       </section>
     </main>
@@ -230,5 +239,6 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script type="module" src="/js/config.js"></script>
+    <script type="module" src="/js/legal.js"></script>
   </body>
 </html>
