--- a/nerin_final_updated/frontend/checkout-form.html
+++ b/nerin_final_updated/frontend/checkout-form.html
@@ -33,6 +33,7 @@
 
     <meta http-equiv="refresh" content="0; url=/checkout-steps.html" />
     <title>Redirigiendo…</title>
+    <meta name="robots" content="noindex, nofollow" />
     <script>window.location.replace('/checkout-steps.html');</script>
     <link rel="stylesheet" href="/components/np-footer.css?v=np-r2">
   <script src="/components/np-footer.js?v=np-r2" defer></script>
