--- a/nerin_final_updated/frontend/login.html
+++ b/nerin_final_updated/frontend/login.html
@@ -35,6 +35,7 @@
       content="width=device-width, initial-scale=1.0, viewport-fit=cover"
     />
     <title>NERIN – Acceder</title>
+    <meta name="robots" content="noindex, nofollow" />
         <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
