--- a/nerin_final_updated/frontend/product.html
+++ b/nerin_final_updated/frontend/product.html
@@ -129,6 +129,18 @@
         <div class="product-page__gallery" id="gallery"></div>
         <div class="product-page__info" id="productInfo"></div>
       </section>
+      <section class="product-reviews" id="verifiedReviews" aria-label="Reseñas verificadas">
+        <h2>Reseñas verificadas</h2>
+        <p id="reviewsSummary">Cargando reseñas verificadas…</p>
+        <div class="review-cta">
+          <p>
+            ¿Querés dejar tu reseña? Usá el link de verificación que enviamos cuando tu pedido
+            se entrega, o continuá desde acá.
+          </p>
+          <a class="button primary review-cta__button" href="/review.html">Dejar reseña verificada</a>
+        </div>
+        <div id="reviewsList" class="reviews-grid"></div>
+      </section>
     </main>
     <div
       class="product-page__lightbox"
