Polish button styles to a more premium professional finish

--- a/nerin_final_updated/frontend/index.html
+++ b/nerin_final_updated/frontend/index.html
@@ -178,6 +178,7 @@
             <li><a href="/login.html">Acceder</a></li>
           </ul>
         </nav>
+        <a href="/arrepentimiento.html" class="button outline header-repent-link">BOTÓN DE ARREPENTIMIENTO</a>
       </div>
     </header>
     <main class="home">
