Add footer badge image file upload controls in admin

--- a/nerin_final_updated/frontend/admin.html
+++ b/nerin_final_updated/frontend/admin.html
@@ -1375,6 +1375,14 @@
           <label><input type="checkbox" name="badge_andreani" /> Andreani</label>
           <label><input type="checkbox" name="badge_efectivo" /> Efectivo</label>
           <label><input type="checkbox" name="badge_transferencia" /> Transferencia bancaria</label>
+          <input type="text" name="badgeImage_mercadoPago" placeholder="Imagen Mercado Pago (/assets/... o https://...)" />
+          <input type="file" name="badgeImageFile_mercadoPago" accept="image/*" />
+          <input type="text" name="badgeImage_andreani" placeholder="Imagen Andreani (/assets/... o https://...)" />
+          <input type="file" name="badgeImageFile_andreani" accept="image/*" />
+          <input type="text" name="badgeImage_efectivo" placeholder="Imagen Efectivo (/assets/... o https://...)" />
+          <input type="file" name="badgeImageFile_efectivo" accept="image/*" />
+          <input type="text" name="badgeImage_transferencia" placeholder="Imagen Transferencia (/assets/... o https://...)" />
+          <input type="file" name="badgeImageFile_transferencia" accept="image/*" />
           <input type="color" name="accentFrom" value="#FFD54F" />
           <input type="color" name="accentTo" value="#FFC107" />
           <input type="color" name="bg" value="#ffffff" />
