--- a/nerin_final_updated/frontend/checkout/confirmacion-transferencia.html
+++ b/nerin_final_updated/frontend/checkout/confirmacion-transferencia.html
@@ -65,7 +65,7 @@
           <ul id="items" class="items"></ul>
         </div>
         <div class="actions">
-          <a class="button primary" href="/seguimiento.html">Ver estado del pedido</a>
+          <a class="button primary" id="trackOrderLink" href="/seguimiento.html">Ver estado del pedido</a>
           <a class="button secondary" href="/shop.html">Seguir comprando</a>
         </div>
       </section>
